--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "module": "esnext",
     "strict": true,
     "skipLibCheck": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "jsx": "react", // JSX를 React 문법으로 변환
+    "esModuleInterop": true // React를 ESM으로 import 가능하도록 설정
   },
-  "include": ["./**/*.ts"],
+  "include": ["./**/*.ts", "main.tsx"],
   "exclude": ["node_modules", "dist"]
 }
